--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the fisher effect<br> 
+    What is the fisher effect calculator?<br>
+    The fisher effect is an economic theory that explains the relationship between nominal interest rate and real interest rate.<br>
+    How to calculate fisher effect?<br>
+    To calculate fisher effect you should use the following formula:<br>
+    real interest rate = nominal interest rate - expected inflation<br>
+    Why use fisher effect calculator?<br>
+    The fisher effect calculator is used in order to find the relationship between nominal interest rate and real interest rate.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
